# model_inference

./: .gitignore  LICENSE  README.md
cmake_demo/: CMakeLists.txt
cmake_demo/example/: CMakeLists.txt
cmake_demo/example/add/: CMakeLists.txt  test_add.cpp
cmake_demo/src/: CMakeLists.txt
cmake_demo/src/add/: add.cc
cmake_demo/utils/: utils.h
cuda/: run.sh
cuda/gemm/: sgemm_base.cu
cuda_demo/flash-attention-minimal/: bench.py  flash.cu  flash.cuh  main.cpp
cuda_demo/gemm/: bench.py  gemm.cu  gemm.cuh  gemm_1_naive.cu  gemm_2_smem.cu  gemm_3_block_tiling_1d.cu  gemm_4_block_tiling_2d.cu  gemm_5_vector.cu  gemm_6_bank_conflict.cu  gemm_7_warp_tiling.cu  main.cpp  run.sh
cuda_demo/vector_add/: bench.py  main.cpp  vector_add.cu
doc/: code_settings.md  不归牛顿管的熊猫.md  神经网络的量化.md  量化.md
doc/cuda/: 基础.md
kernel/: CMakeLists.txt  run.sh
kernel/cmake/: 3rdparty.cmake  cuda.cmake
kernel/example/add/: CMakeLists.txt  example_add.cpp
kernel/include/kernel/: customop.h
kernel/include/kernel/add/: add.h
kernel/include/kernel/context/: context.h  logger.hpp
kernel/include/kernel/reduce_2d_op/: reduce_2d_op.h
kernel/include/kernel/reduce_sum/: reduce_sum.h
kernel/include/kernel/utils/: conv_utils.h  cublas_utils.h  cuda_utils copy.h  cuda_utils.h  error.h
kernel/include/kernel/vector_add_1d/: vector_add_1d.h
kernel/src/: CMakeLists.txt
kernel/src/add/: add.cc
kernel/src/reduce_2d_op/: reduce_2d_op.cc
kernel/src/reduce_sum/: reduce_sum.cc
kernel/src/reduce_sum/kernels/: forwar_functor.cu  forward_functor.h  reduce_sum_1d.cuh
kernel/src/utils/: types.h
kernel/src/vector_add_1d/: vector_add_1d.cc
kernel/src/vector_add_1d/kernels/: forwar_functor.cu  forward_functor.h  vector_add_1d.cuh
kernel/test/: CMakeLists.txt  utils.h
kernel/test/add/: CMakeLists.txt  test_add.cpp
kernel/test/data_loader/: cnpy.cpp  cnpy.h
kernel/test/reduce_2d_op/: CMakeLists.txt  test_reduce_2d_op.cpp
kernel/test/reduce_sum/: CMakeLists.txt  test_reduce_sum.cpp
kernel/test/test_context/: test_context.cu  test_context.h
kernel/test/vector_add_1d/: CMakeLists.txt  test_vector_add_1d.cpp
kernel/utils/: utils.h
kernel_profiling/: cuda_kernel_performance  cuda_kernel_performance.cu  cuda_kernel_performance.nsys-rep  run.sh  test  test.cu  test.nsys-rep
python/gen_test_data/: reduce_sum.py  reduce_sum_2d.py  vector_add_1d.py
triton-demo/: add.py  matmul.py
